# mqttnetworking

./: README.md
mqtt_prj/: CMakeLists.txt  mqttClient.c
mqtt_prj/cmake/: arm-linux-setup.cmake
